# app/Http/Controllers/Api/ProductCtrl.php
@@ -5,8 +5,10 @@ namespace App\Http\Controllers\Api;
 use Illuminate\Http\Request;
 use App\Http\Controllers\Controller;
 use App\Product;
+use App\Review;
 use Illuminate\Support\Facades\Auth;
 use Illuminate\Support\Facades\DB;
+
 
 class ProductCtrl extends Controller
 {
@@ -18,15 +20,6 @@ class ProductCtrl extends Controller
      *     tags={"Products"},
      *     summary="Display a listing of the products",
      *     security={{"bearerAuth":{}}},
-     *     @OA\Parameter(
-     *         description="Page number",
-     *         in="query",
-     *         name="page",
-     *         @OA\Schema(
-     *           type="integer",
-     *           format="int64"
-     *         )
-     *     ),
      *     @OA\Response(response="200",description="ok"),
      *     @OA\Response(response="401",description="unauthorized")
      * )
@@ -37,7 +30,7 @@ class ProductCtrl extends Controller
                     -> join('users as u', 'p.user_id', '=', 'u.id')
                     -> select('p.*', 'u.name as sellerName', 'u.id as userID', 'u.avatar_original', 'u.city', 'u.address')
                     -> where('u.user_type', 'seller')
-                    -> paginate(10);
+                    -> orderBy('p.id', 'desc')->get();
         return response()->json($products, 200);
     }
 
@@ -170,6 +163,50 @@ class ProductCtrl extends Controller
         if ($product != null) {
             return response()->json($product, 200);
         }else{
+            return response()->json([
+                'success' => false,
+                'message' => 'Data tidak ditemukan'
+            ], 401);
+        }
+    }
+
+    /**
+    * @OA\Get(
+    *     path="/product_review/{id}",
+    *     operationId="list product review by id",
+    *     tags={"Products"},
+    *     summary="Display a listing of the product review by id",
+    *     security={{"bearerAuth":{}}},
+    *     @OA\Parameter(
+    *         description="ID of product review to return",
+    *         in="path",
+    *         name="id",
+    *         required=true,
+    *         @OA\Schema(
+    *           type="integer",
+    *           format="int64"
+    *         )
+    *     ),
+    *     @OA\Response(response="200",description="ok"),
+    *     @OA\Response(response="401",description="unauthorized")
+    * )
+    */
+
+    public function product_review($id)
+    {
+        $review = DB::table('reviews as r')
+                    ->join('users as b', 'b.id', '=', 'r.user_id')
+                    ->where('r.product_id', $id)
+                    ->select([
+                        'r.*',
+                        'b.name as buyer_name',
+                        'b.email as buyer_email',
+                        'b.avatar_original as buyer_avatar'
+                    ])
+                    ->get();
+        if (count($review) > 0) {
+            return response()->json($review, 200);
+        }else {
             return response()->json([
                 'success' => false,
                 'message' => 'Data tidak ditemukan'
@@ -373,16 +410,6 @@ class ProductCtrl extends Controller
      *     tags={"Products"},
      *     summary="Display a listing of the product by category id",
      *     security={{"bearerAuth":{}}},
-     *     @OA\Parameter(
-     *         description="Category ID of product to return",
-     *         in="path",
-     *         name="category_id",
-     *         required=true,
-     *         @OA\Schema(
-     *           type="integer",
-     *           format="int64"
-     *         )
-     *     ),
      *     @OA\Response(response="200",description="ok"),
      *     @OA\Response(response="401",description="unauthorized")
      * )
@@ -394,7 +421,7 @@ class ProductCtrl extends Controller
             -> select('p.*', 'u.name as sellerName', 'u.id as userID', 'u.avatar_original', 'u.city', 'u.address')
             -> where('u.user_type', 'seller')
             -> where('p.category_id', $category_id)
-            -> paginate(10);
+            -> orderBy('p.id', 'desc');
         if ($product != null) {
             return response()->json($product, 200);
         }else{
@@ -412,16 +439,6 @@ class ProductCtrl extends Controller
      *     tags={"Products"},
      *     summary="Display a listing of the product by category id and current user",
      *     security={{"bearerAuth":{}}},
-     *     @OA\Parameter(
-     *         description="Category ID of product to return",
-     *         in="path",
-     *         name="category_id",
-     *         required=true,
-     *         @OA\Schema(
-     *           type="integer",
-     *           format="int64"
-     *         )
-     *     ),
      *     @OA\Response(response="200",description="ok"),
      *     @OA\Response(response="401",description="unauthorized")
      * )
@@ -438,4 +455,6 @@ class ProductCtrl extends Controller
             ], 401);
         }
     }
+
+    
 }
