# storage/api-docs/api-docs.json
@@ -13,11 +13,11 @@
     },
     "servers": [
         {
-            "url": "http://localhost:8000/api",
+            "url": "http://192.168.7.226/api",
             "description": "Laravel Adpoint API"
         },
         {
-            "url": "https://localhost:8000/api",
+            "url": "https://192.168.7.226/api",
             "description": "Laravel Adpoint API"
         }
     ],
@@ -29,17 +29,6 @@
                 ],
                 "summary": "Display a listing of the brands",
                 "operationId": "list brands",
-                "parameters": [
-                    {
-                        "name": "page",
-                        "in": "query",
-                        "description": "Page number",
-                        "schema": {
-                            "type": "integer",
-                            "format": "int64"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "ok"
@@ -234,17 +223,6 @@
                 ],
                 "summary": "Display a listing of the categories",
                 "operationId": "list categories",
-                "parameters": [
-                    {
-                        "name": "page",
-                        "in": "query",
-                        "description": "Page number",
-                        "schema": {
-                            "type": "integer",
-                            "format": "int64"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "ok"
@@ -406,17 +384,6 @@
                 ],
                 "summary": "Display a listing of the flashdeal",
                 "operationId": "list flashdeal",
-                "parameters": [
-                    {
-                        "name": "page",
-                        "in": "query",
-                        "description": "Page number",
-                        "schema": {
-                            "type": "integer",
-                            "format": "int64"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "ok"
@@ -535,17 +502,6 @@
                 ],
                 "summary": "Display a listing of the flashdeal products",
                 "operationId": "list flashdeal products",
-                "parameters": [
-                    {
-                        "name": "page",
-                        "in": "query",
-                        "description": "Page number",
-                        "schema": {
-                            "type": "integer",
-                            "format": "int64"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "ok"
@@ -683,17 +639,6 @@
                 ],
                 "summary": "Display a listing of the orders",
                 "operationId": "list orders",
-                "parameters": [
-                    {
-                        "name": "page",
-                        "in": "query",
-                        "description": "Page number",
-                        "schema": {
-                            "type": "integer",
-                            "format": "int64"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "ok"
@@ -847,17 +792,6 @@
                 ],
                 "summary": "Display a listing of the products",
                 "operationId": "list products",
-                "parameters": [
-                    {
-                        "name": "page",
-                        "in": "query",
-                        "description": "Page number",
-                        "schema": {
-                            "type": "integer",
-                            "format": "int64"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "ok"
@@ -969,6 +903,40 @@
                 ]
             }
         },
+        "/product_review/{id}": {
+            "get": {
+                "tags": [
+                    "Products"
+                ],
+                "summary": "Display a listing of the product review by id",
+                "operationId": "list product review by id",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of product review to return",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok"
+                    },
+                    "401": {
+                        "description": "unauthorized"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/product/edit/{id}": {
             "put": {
                 "tags": [
@@ -1019,18 +987,6 @@
                 ],
                 "summary": "Display a listing of the product by category id",
                 "operationId": "list product by category id",
-                "parameters": [
-                    {
-                        "name": "category_id",
-                        "in": "path",
-                        "description": "Category ID of product to return",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "format": "int64"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "ok"
@@ -1053,18 +1009,6 @@
                 ],
                 "summary": "Display a listing of the product by category id and current user",
                 "operationId": "list product by category id and current user",
-                "parameters": [
-                    {
-                        "name": "category_id",
-                        "in": "path",
-                        "description": "Category ID of product to return",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "format": "int64"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "ok"
@@ -1087,17 +1031,6 @@
                 ],
                 "summary": "Display a listing of the pushy token devices",
                 "operationId": "list pushy token devices",
-                "parameters": [
-                    {
-                        "name": "page",
-                        "in": "query",
-                        "description": "Page number",
-                        "schema": {
-                            "type": "integer",
-                            "format": "int64"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "ok"
@@ -1181,6 +1114,28 @@
                 }
             }
         },
+        "/sellers": {
+            "get": {
+                "tags": [
+                    "Sellers"
+                ],
+                "summary": "Display a listing of the seller",
+                "operationId": "list seller",
+                "responses": {
+                    "200": {
+                        "description": "ok"
+                    },
+                    "401": {
+                        "description": "unauthorized"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/subcategories": {
             "get": {
                 "tags": [
@@ -1188,17 +1143,6 @@
                 ],
                 "summary": "Display a listing of the subcategories",
                 "operationId": "list subcategories",
-                "parameters": [
-                    {
-                        "name": "page",
-                        "in": "query",
-                        "description": "Page number",
-                        "schema": {
-                            "type": "integer",
-                            "format": "int64"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "ok"
@@ -1360,17 +1304,6 @@
                 ],
                 "summary": "Display a listing of the transaction",
                 "operationId": "list transaction",
-                "parameters": [
-                    {
-                        "name": "page",
-                        "in": "query",
-                        "description": "Page number",
-                        "schema": {
-                            "type": "integer",
-                            "format": "int64"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "ok"
@@ -2070,6 +2003,20 @@
                         "example": "123456"
                     },
                     "device_token": {
+                        "type": "string",
+                        "example": "string"
+                    }
+                },
+                "type": "object"
+            },
+            "ReviewSchema": {
+                "title": "Review",
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "example": 0
+                    },
+                    "name": {
                         "type": "string",
                         "example": "string"
                     }
